*** WIP: Fixed padding on the header; Fixed form fields alignment on smaller phones"

--- a/app/assets/stylesheets/signup.scss
+++ b/app/assets/stylesheets/signup.scss
@@ -176,7 +176,7 @@ ul.nav {
   line-height: 59px;
 }
 
-#elevator-pitch span.lighter {
+#elevator-pitch .lighter {
   font-weight: 100;
 }
 
@@ -186,6 +186,7 @@ ul.nav {
       padding-left: 9%;
       height: 366px;
       width: 350px;
+
 
       a {
         color: $white;
@@ -503,7 +504,7 @@ p.tagline-highlight {
     margin-left: 10px;
   }
   .navbar-brand {
-    padding-left: 10px;
+    padding: 10px 10px 14px 11px;
   }
 
   #elevator-pitch {
@@ -514,6 +515,7 @@ p.tagline-highlight {
       height: 130px;
     }
   #signup-form {
+      display: block;
       padding-left: 0;
       padding-top: 15px;
       text-align: center;
@@ -550,8 +552,6 @@ p.tagline-highlight {
   }
 
   .navbar-brand {
-    padding: 10px 10px 14px 26px;
-
     img {
       float: left;
       margin-left: 9px;
